src/main/java/com/example/error/BusinessException.java
package com.example.error;

public class BusinessException extends ResultMessagesNotificationException{

    @Override
    public String getResultMessages() {
        return null;
    }

    @Override
    public String getMessage() {
        return null;
    }
}
